fix: adjusted the gap to 2.5 rem between the faq accordion and the left side containing the image of the woman

--- a/challenges/faq_accordion_card/style.css
+++ b/challenges/faq_accordion_card/style.css
@@ -78,7 +78,7 @@ label:active div {
 @media (min-width: 1290px) {
   .woman-image-desktop {
     top: 50px;
-    left: -100px;
+    left: -96px;
   }
 }
 
